test/success/match/main.sk
module Main {

fn main() {
   match (True, False) {
        (True, False) -> 4,
        (False, False) -> 4,
        (_, True) -> 4,
    };
}

}
     
