test/errors/match_tuple_missing_pattern/main.sk
module Main {

enum Bool {
    True,
    False
}

fn main() {
    match (True, False,3, "4") {
        (True, True, 1, "korte") -> 1,
        (True, False, _, _) -> 2,
        (False, True, _, _) -> 3,
        (False, False, _, _) -> 4,
    }
}

}